--- a/physics_main.html
+++ b/physics_main.html
@@ -8,13 +8,17 @@
     <header>
         <h1>물리 이야기</h1>
     </header>
-    <nav1>
-        <n1>고전역학</n1>
-        <n2>전자기학</n2>
-        <n3>양자역학</n3>
-    </nav1>
+    <nav>
+        <ul>
+            <li>고전역학</li>
+            <li>전자기학</li>
+            <li>양자역학</li>
+        </ul>
+    </nav>
     <article>
+        <br>
     <h2>물리</h2>
         물리학(物理學, physics)은 물질과,그것의 시공간에서의 운동, 그리고 그것과 관련된 에너지나 힘 등을 연구하는 자연과학의 한 분야이다. 가장 기초적인 과학의 한 분야로, 물리학의 목표는 우주 또는 자연이 어떤 식으로 행동하는가를 논리적으로 이해하는 것이다.
     </article>
+    </br>
 </body>
